# aai-sec-sdk

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  SDK-assessment.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  quality.yml  security.yml
api/: index.html
architecture/: index.html
contributing/: index.html
docs/: README.md  api.md  architecture.md  contributing.md  end-to-end-example.md  getting-started.md  guardrails.md  index.md  license.md  releasing.md  security-model.md
end-to-end-example/: index.html
examples/: __init__.py  guarded_runtime.py  support_agent.py
getting-started/: index.html
guardrails/: index.html
license/: index.html
releasing/: index.html
scripts/: check_artifacts.py  check_guardrails.py  generate_readme.py
search/: search_index.json
security-model/: index.html
src/agentic_security/: __init__.py  approvals.py  audit.py  budgets.py  credentials.py  errors.py  policies.py  policy_adapters.py  runtime.py  telemetry.py  tools.py  types.py
tests/: test_credentials.py  test_example.py  test_policy_adapters.py  test_repository_guardrails.py  test_runtime_security.py  test_support_agent.py  test_telemetry.py
